--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-          <modelVersion>4.0.0</modelVersion>
-  
-          <groupId>com.dependabot</groupId>
-          <artifactId>basic-pom</artifactId>
-          <version>0.0.1-RELEASE</version>
-          <name>Dependabot Basic POM</name>
-  
-          <packaging>pom</packaging>
-  
-          <dependencies><dependency>
-              <groupId>org.springframework</groupId>
-              <artifactId>spring-aop</artifactId>
-              <version>4.0.0</version>
-            </dependency>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.dependabot</groupId>
+    <artifactId>basic-pom</artifactId>
+    <version>0.0.1-RELEASE</version>
+    <name>Dependabot Basic POM</name>
+
+    <packaging>pom</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+</project>
