--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
 
     <packaging>pom</packaging>
 
+    <modules>
+        <module>child-module</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
